--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,10 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+data/
+wandb/
+models/
+results/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
